Добавление css и папки images

--- a/index.html
+++ b/index.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta  http-equiv="content-type" content="text/html; charet=iso-8859-1" />
+    <title>Nike online shop</title>
+    <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
+<div id="topPan">
+    <a href="index.html">
+        <img class="logo" src="images/nike logo red.jpg" alt="Nike online shop" border="0" title="Nike Home" />
+    </a>
+    <p class="caption">Online shop</p>
+
+</div>
+<div id="HeaderPan">
+    <ul class="leftmenu">
+        <li class="home"><a href="index.html">Home</a></li>
+        <li class="wear"><a href="#">Outerwear</a></li>
+        <li class="img-sneakers"><a href="#">Sneakers</a></li>
+        <li class="clients"><a href="#">About us</a></li>
+    </ul>
+</div>
+
+<div id="bodypan">
+    <div id="leftpan">
+        <h2>Outerwear</h2>
+        <ul>
+            <li><a href="https://www.nike.com/t/sportswear-mens-french-terry-crew-8DThmp/CT9762-070">Sportswear</a></li>
+            <li><a href="https://www.nike.com/t/dri-fit-mens-sleeveless-fleece-training-hoodie-NSvBMP/CJ4746-100">Dri-FIT</a></li>
+            <li><a href="https://www.nike.com/t/sportswear-club-crew-TWcqLw/BV2662-731">Sportswear</a></li>
+            <li><a href="https://www.nike.com/t/nikelab-mens-hoodie-6gx9mc/CD6393-436">NikeLab</a></li>
+            <li><a href="https://www.nike.com/t/dri-fit-mens-sleeveless-pullover-training-hoodie-VlBW3c/CJ4423-051">Dri-FIT</a></li>
+            <li><a href="https://www.nike.com/t/sportswear-mens-fleece-hoodie-L5tBq6/CQ7205-100">Sportswear</a></li>
+
+        </ul>
+
+        <h2>Sneakers</h2>
+        <ul>
+            <li><a href="https://www.nike.com/t/air-zoom-superrep-mens-hiit-class-shoe-ZWLnJW/CD3460-007">Air Zoom</a></li>
+            <li><a href="https://www.nike.com/t/free-metcon-3-training-shoe-HT6hdN/CJ0861-007">Free Metcon 3</a></li>
+            <li><a href="https://www.nike.com/t/metcon-5-mens-training-shoe-lFwjMP/AQ1189-007">Metcon 5</a></li>
+            <li><a href="https://www.nike.com/t/superrep-go-mens-training-shoe-19sK4X/CJ0773-010">SuperRep Go</a></li>
+            <li><a href="https://www.nike.com/t/free-metcon-3-amp-training-shoe-fSbsgp/CV9341-461">Free Metcon 3</a></li>
+        </ul>
+    </div>
+    <div id="rigtPan">
+        <p class="more"><a href="#">About Nike</a></p>
+        <p class="justify">
+            <img src="images/nikedidyouknow.jpg" align="left" alt="About Nike" style="margin-right:15px;" />
+            Our mission is what drives us to do everything possible to expand human potential. We do that by creating groundbreaking sport innovations, by making our products more sustainably, by building a creative and diverse global team and by making a positive impact in communities where we live and work.
+
+            Based in Beaverton, Oregon, NIKE, Inc. includes the Nike, Converse, and Jordan brands.
+
+
+        </p>
+
+        <p class="more"><a href="#">Products</a></p>
+        <p class="justify">
+            <img src="images/Nike prod.jpg" align="left" alt="Products" style="margin-right:15px;" />
+            Nike produces a wide range of sports equipment. Their first products were track running shoes. They currently also make shoes, jerseys, shorts, cleats, baselayers, etc. for a wide range of sports, including track and field, baseball, ice hockey, tennis, association football (soccer), lacrosse, basketball, and cricket. Nike Air Max is a line of shoes first released by Nike, Inc. in 1987. Additional product lines were introduced later, such as Air Huarache, which debuted in 1992. The most recent additions to their line are the Nike 6.0, Nike NYX, and Nike SB shoes, designed for skateboarding. Nike has recently introduced cricket shoes called Air Zoom Yorker, designed to be 30% lighter than their competitors'. In 2008, Nike introduced the Air Jordan XX3, a high-performance basketball shoe designed with the environment in mind.
+
+
+        </p>
+
+        <p class="more"><a href="#">COVID-19</a></p>
+        <p class="justify">
+            <img src="images/covid.jpeg" align="left" alt="COVID-19 UPDATES" style="margin-right:15px;" />
+            This is a long shot.
+
+            It isn’t the first time that Nike teams have sprung into action to meet a daunting challenge.
+
+            But there was no precedent for this level of urgency. There was no playbook for these kind of stakes, as teams across NIKE, Inc., came together to respond to a pressing need: personal protective equipment (PPE) for healthcare workers fighting COVID-19.
+
+            Among those who rallied to help are designers, innovators, engineers, social impact partners and public affairs leaders, working closely with local health professionals while adhering to social distancing and safety guidelines. And they are far from alone, as companies and industries worldwide join in supporting front-line responders.
+
+            What follows is the story of one team’s race to deliver protective equipment into the hands of healthcare workers fighting to save lives, as told by those who came together to make it possible.
+
+
+        </p>
+    </div>
+</div>
+
+<div id="footermainPan">
+    <div id="footerPan">
+        <ul>
+            <li class="home"><a href="index.html">Home</a>∣</li>
+            <li class="wear"><a href="#">Outerwear</a>∣</li>
+            <li class="img-sneakers"><a href="#">Sneakers</a>∣</li>
+            <li class="clients"><a href="#">About us</a></li>
+        </ul>
+        <p class="copyright">© 2020 Nike. All right reserved.</p>
+    </div>
+</div>
+
 
 </body>
 </html>
