Правки в css выравнивание элементов

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 <div id="footermainPan">
     <div id="footerPan">
         <ul>
-            <li class="home"><a href="index.html">Home</a>∣</li>
-            <li class="wear"><a href="#">Outerwear</a>∣</li>
-            <li class="img-sneakers"><a href="#">Sneakers</a>∣</li>
+            <li class="home"><a href="index.html">Home</a></li>
+            <li class="wear"><a href="#">Outerwear</a></li>
+            <li class="img-sneakers"><a href="#">Sneakers</a></li>
             <li class="clients"><a href="#">About us</a></li>
         </ul>
         <p class="copyright">© 2020 Nike. All right reserved.</p>
